# lpcf

./: README.md  __temp__profile_results.prof  config.py  control_policy_data.pkl  example_adp_linear_parametric.py  example_adp_nonlinear_pendulum.py  example_adp_pure_linear.py  example_battery.py  example_control_cstr.py  example_control_policy.py  example_convex_classification.py  example_convex_fit.py  example_monotonic.py  example_optimal_control.py  example_pwa.py  example_quadratic.py  example_quadratic_bak.py  example_quadratic_v2.py  main.py  optimal_control.pkl  optimal_control_fit.pkl  optimal_control_fit_cstr.pkl  optimal_control_fit_linear.pkl  optimal_control_fit_nonlinear.pkl  optimal_control_samples_cstr.pkl  optimal_control_samples_linear.pkl  optimal_control_samples_nonlinear.pkl  pcf.py  pyproject.toml  utils.py
autoencoder/: example_convex_autoencoder_fit_with_omega.py
development/: control_policy_data.pkl  example_control_linear.py  example_convex_fit_param_weights.py  main.py
development/autoencoder/: example_convex_autoencoder_fit.py
development/examples/: example_adp_pure_linear.py  example_nlmpc.py
examples/: example_adp_nonlinear_pendulum.py  example_battery.pkl  example_battery.py  example_convex_classification.py  example_monotonic.py  example_nlmpc.py  example_pwa.pkl  example_pwa.py  example_quadratic.pkl  example_quadratic.py  optimal_control_fit_nonlinear.pkl  optimal_control_samples_nonlinear.pkl
lpcf/: pcf.py  utils.py
tests/: test_pcf.py
