[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lpcf"
version = "0.1.0"
description = "Learning parametric convex functions"
authors = [
    {name = "Name 1", email = "email1@domain.com"},
    {name = "Name 2", email = "email2@domain.com"},
    {name = "Name 3", email = "email3@domain.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jax-sysid>=1.0.6",
    "cvxpy>= 1.6.0",
    "numpy>=1.21.6"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lpcf*"]

[project.urls]
"Homepage" = "https://github.com/cvxgrp/lpcf"
